--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -51,7 +51,7 @@ body:before {
 
 
 #brand {
-	font-family: Caudex, serif;
+	font-family: 'Droid Serif', Georgia, serif;
 	margin: auto;
 	text-align: center;
 	letter-spacing: 3px;
@@ -62,7 +62,7 @@ body:before {
 }
 
 nav {
-	font-family: Helvetica, sans-serif;
+	font-family: 'Droid Sans', Helvetica, sans-serif;
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
 	width: 90%;
@@ -93,7 +93,7 @@ a:active {
 /* main content styling */
 
 p {
-	font-family: Helvetica, sans-serif;
+	font-family: 'Droid Sans', Helvetica, sans-serif;
 	font-size: 16px;
 	text-align: justify;
 }
