set colors of boxes

--- a/CSS/frontpage.css
+++ b/CSS/frontpage.css
@@ -1,27 +1,33 @@
 .container {
-	
 	width: 90%;
 	max-width: 920px;
 	margin: auto;
 	background-color: #ffffff;
 }
 
+#name {
+	font-family: 'Droid Serif', Georgia, Serif;
+}
 
+h1 {font-size: 32px;
+}
 
 .box {
-
+	width: 30%;
+	height: 30%;
+	border-radius: 10px;
 }
 
 
 
 #about {
-
+	background-color: blue;
 }
 
 
 
 #cv {
-
+	background-color: red;
 }
 
 
@@ -29,19 +35,25 @@
 
 
 #research {
-
+	background-color: yellow;
 }
 
 
 
 
 #technology {
-
+	background-color: green;
 }
 
 
-
-
-h1 {
-
+body {
+	height: 100%;
+	width: 100%;
 }
+
+footer {
+	font-family: 'Droid Sans', Helvetica, Sans;
+	font-size: 10px;
+	text-align: center;
+}
+
