--- a/CSS/frontpage.css
+++ b/CSS/frontpage.css
@@ -12,6 +12,16 @@
 h1 {font-size: 32px;
 }
 
+#left {
+	float: left;
+	width: 30%;
+}
+
+#right {
+	float: right;
+	width: 60%;
+}
+
 .box {
 	width: 30%;
 	height: 30%;
@@ -55,5 +65,6 @@ footer {
 	font-family: 'Droid Sans', Helvetica, Sans;
 	font-size: 10px;
 	text-align: center;
+	clear: both;
 }
 
