--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -38,6 +38,10 @@ body {
 	background-color: #ffffff;
 }
 
+body {
+	background: #ffffff url('../pw_pattern.png') fixed;
+}
+
 /*Opera Fix for stick footer*/
 body:before {
 	content:"";
@@ -81,14 +85,21 @@ nav li {
 	text-decoration: none;
 }
 
-a {
+nav a {
 	text-decoration: none;
 	color: black;
+	padding: 8px;
+	border-radius: 4px;
 }
 
-a:active {
-	text-decoration: none;
+a:active {}
+a:link {}
+a:visited {}
+a:hover {}
+a:focus {
+	outline: none;
 }
+
 
 /* main content styling */
 
