Uploaded and instituted new background pattern

--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -39,7 +39,7 @@ body {
 }
 
 body {
-	background: #ffffff url('../pw_pattern.png') fixed;
+	background: #ffffff url('../images/greywash.png') fixed;
 }
 
 /*Opera Fix for stick footer*/
